--- a/pages/etiquette.html
+++ b/pages/etiquette.html
@@ -125,6 +125,24 @@
         <div class="media mb-4">
           <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
           <div class="media-body">
+            <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">정태수</p>
+            <p style="font-size: 21px;">
+            
+            </p>
+          </div>
+        </div>
+        <div class="media mt-4">
+          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <div class="media-body">
+            <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">손정욱</p>
+            <p style="font-size: 21px;">
+            
+            </p>
+          </div>
+        </div>
+        <div class="media mb-4">
+          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <div class="media-body">
             <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">손찬영</p>
             <p style="font-size: 21px;">
               처음 듣는 부일영화상 시상식에 참여해 본 것이 새로운 경험이었다.
@@ -134,33 +152,6 @@
             </p>  
           </div>
         </div>
-
-        <!-- Comment with nested comments -->
-        <div class="media mb-4">
-          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-          <div class="media-body">
-            <h5 class="mt-0">Commenter Name2</h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-
-            <div class="media mt-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-              <div class="media-body">
-                <h5 class="mt-0">Commenter Name3</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-              </div>
-            </div>
-
-            <div class="media mt-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-              <div class="media-body">
-                <h5 class="mt-0">Commenter Name4</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-              </div>
-            </div>
-
-          </div>
-        </div>
-
       </div>
 
       <!-- Sidebar Widgets Column -->
@@ -203,7 +194,7 @@
                     <a href="#">#부산일보</a>
                   </li>
                   <li>
-                    <a href="#">#너무이쁘십니다</a>
+                    <a href="#">#너무이뻐요</a>
                   </li>
                 </ul>
               </div>
