--- a/pages/hope.html
+++ b/pages/hope.html
@@ -73,7 +73,7 @@
         <!-- Post Content -->
         <br>
         <p style="font-size: 21px;">
-        &nbsp; <span style="font-size: 36px;">T</span>HEC 융합인성 조별과제 수행 차<br>
+        &nbsp; <span style="font-size: 36px;">T</span>ECH 융합인성 조별과제 수행 차<br>
         11월 11일에 부산 해운대 벡스코에서 열린<br>
         국제환경에너지 산업전 박람회를 다녀왔다.<br><br>
         <span style="font-size: 36px;">국</span>제환경에너지 산업전 박람회는<br>
@@ -146,27 +146,23 @@
 
         <!-- Comment with nested comments -->
         <div class="media mb-4">
+          <img class="d-flex mr-3 rounded-circle" src="../assets/img/portfolio/profile/co_profile.jpg" alt="">
+          <div class="media-body">
+            <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">박철오</p>
+            <p style="font-size: 21px;">
+              
+            </p>    
+          </div>
+        </div>
+        <div class="media mt-4">
           <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
           <div class="media-body">
-            <h5 class="mt-0">Commenter Name2</h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-
-            <div class="media mt-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-              <div class="media-body">
-                <h5 class="mt-0">Commenter Name3</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-              </div>
-            </div>
-
-            <div class="media mt-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-              <div class="media-body">
-                <h5 class="mt-0">Commenter Name4</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-              </div>
-            </div>
-
+            <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">정태수</p>
+            <p style="font-size: 21px;">
+              여러 가지 전기와 관련된 것들이 많았고 우리가 일상생활에서 쓰는데 아무 생각 없이 사용하는 것들도 있었다. 
+              잘 모르고 전공 지식이 없다보니 와 닿지 않는 부분도 많았는데 
+              같이 갔던 친구들 중에 전공인 친구가 있어서 옆에서 설명을 잘 해주어서 의미있는 박람회가 되었던 것 같다고 생각한다.
+            </p> 
           </div>
         </div>
 
