--- a/pages/tech.html
+++ b/pages/tech.html
@@ -75,7 +75,7 @@
         <blockquote class="blockquote">
           <p class="mb-0" style="font-size: 21px;">사는게 재미없는 이 시대의 남자들과 그 가족들에게 힘이 되어 드리겠습니다.</p>
           <footer class="blockquote-footer">
-            <cite title="Source Title" style="position: relative; left: 75%;">김정운교수</cite>
+            <cite title="Source Title" style="position: relative; left: 75%;">- 김정운교수 -</cite>
           </footer>
         </blockquote>
         <br>
@@ -169,28 +169,24 @@
         <div class="media mb-4">
           <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
           <div class="media-body">
-            <h5 class="mt-0">Commenter Name2</h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-
-            <div class="media mt-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-              <div class="media-body">
-                <h5 class="mt-0">Commenter Name3</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-              </div>
-            </div>
-
-            <div class="media mt-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-              <div class="media-body">
-                <h5 class="mt-0">Commenter Name4</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-              </div>
-            </div>
-
+            <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">정태수</p>
+            <p style="font-size: 21px;">
+              인상 깊었던 장면은 남자의 행복이라는 것은 야망, 책임, 성공이라는 것들만 붙는다고 한다.
+              이것은 ‘사회적 표상’이라는 것인데 “가족은 단란하고 행복해야 한다.” 같은 사회적으로 고정된 개념이라는 의미인데
+              성공해도 행복하지 않고 야망을 가져도 행복하지 않다고 했다. 이미 성공하면 행복할 수조차 없다고 했다.
+              그래서 여러 가지 행복해지는 방법을 설명해 주시는데 도입 부분에서 설명을 잘 해줘서 재밌게 빠져들었다. 
+            </p>
           </div>
         </div>
-
+        <div class="media mt-4">
+          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <div class="media-body">
+            <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">손정욱</p>
+            <p style="font-size: 21px;">
+            
+            </p>
+          </div>
+        </div>
       </div>
 
       <!-- Sidebar Widgets Column -->
