--- a/pages/charming.html
+++ b/pages/charming.html
@@ -122,20 +122,9 @@
         <div class="media mb-4">
           <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
           <div class="media-body">
-            <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">손찬영</p>
+            <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">손정욱</p>
             <p style="font-size: 21px;">
-            처음 입장했을 때는 조명들과 많은 LED를 사용한 구조물이 눈길을 사로잡았지만
-            몇 작품은 의도가 무엇인지 무엇을 뜻하는지 정확히 알아차리기가 힘들었다.
-            2층에는 암실과 작가님이 촬영한 필름이 전시되어 있었다.
-            디지털카메라가 보편화된 지금 직접 필름을 본 것이 중학생 이후로 처음 봐서 새삼 그리움도 느낄 수 있었다.
-            2층에는 여러 사진 작품들을 볼 수 있었고 그 중 눈에 띄었던 것은 부산의 야경을 촬영한 것과
-            현재 우리의 일상을 보여주는 듯 한 설치 작품이었다.
-            조리개 장노출을 이용하여 부산의 야경을 촬영한 사진의 경우 외국의 야경 사진 못지않은 아름다움을 볼 수 있었고
-            외국 못지않은 아름다운 야경을 부산도 가지고 있다는 것을 다시 한 번 알 수 있었고
-            같은 공간에서 각자 사람들이 본인의 휴대폰만을 보고 있는 모습은 먼 거리의 사람들과는
-            인터넷으로 연결되어 같이 소통하는 모습과는 반대로 정작 같은 공간의 사람들과의 소통은 적어진 것 같다고 생각하기도 하였다.
-            미술 전시회 같은 경우는 마음먹고 오기가 쉽지 않아 직접 가본 적은 손에 꼽을 정도이지만
-            직접 가보니 또 새로운 경험을 하게 된 것 같아 보람이 있었다고 생각한다.
+            
             </p>
           </div>
         </div>
@@ -144,25 +133,41 @@
         <div class="media mb-4">
           <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
           <div class="media-body">
-            <h5 class="mt-0">Commenter Name2</h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-
-            <div class="media mt-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-              <div class="media-body">
-                <h5 class="mt-0">Commenter Name3</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-              </div>
-            </div>
-
-            <div class="media mt-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-              <div class="media-body">
-                <h5 class="mt-0">Commenter Name4</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-              </div>
-            </div>
-
+            <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">손찬영</p>
+                <p style="font-size: 21px;">
+                처음 입장했을 때는 조명들과 많은 LED를 사용한 구조물이 눈길을 사로잡았지만
+                몇 작품은 의도가 무엇인지 무엇을 뜻하는지 정확히 알아차리기가 힘들었다.
+                2층에는 암실과 작가님이 촬영한 필름이 전시되어 있었다.
+                디지털카메라가 보편화된 지금 직접 필름을 본 것이 중학생 이후로 처음 봐서 새삼 그리움도 느낄 수 있었다.
+                2층에는 여러 사진 작품들을 볼 수 있었고 그 중 눈에 띄었던 것은 부산의 야경을 촬영한 것과
+                현재 우리의 일상을 보여주는 듯 한 설치 작품이었다.
+                조리개 장노출을 이용하여 부산의 야경을 촬영한 사진의 경우 외국의 야경 사진 못지않은 아름다움을 볼 수 있었고
+                외국 못지않은 아름다운 야경을 부산도 가지고 있다는 것을 다시 한 번 알 수 있었고
+                같은 공간에서 각자 사람들이 본인의 휴대폰만을 보고 있는 모습은 먼 거리의 사람들과는
+                인터넷으로 연결되어 같이 소통하는 모습과는 반대로 정작 같은 공간의 사람들과의 소통은 적어진 것 같다고 생각하기도 하였다.
+                미술 전시회 같은 경우는 마음먹고 오기가 쉽지 않아 직접 가본 적은 손에 꼽을 정도이지만
+                직접 가보니 또 새로운 경험을 하게 된 것 같아 보람이 있었다고 생각한다.
+                </p>
+          </div>
+        </div>
+        <div class="media mt-4">
+          <img class="d-flex mr-3 rounded-circle" src="../assets/img/portfolio/profile/co_profile.jpg" alt="">
+          <div class="media-body">
+            <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">박철오</p>
+            <p style="font-size: 21px;">
+              미술관 또는 전시회를 자주 다녀본 것은 아니지만 방문할 때에는 별다른 감흥 없이 나오곤 했다.
+              이번 TECH융합인성 과제로 방문하게 되어 평소와 다름없이 그냥 다녀오겠거니 생각하고 방문을 했다.
+              방문해보니 1층에서는 서면이라는 우리와 밀접한 소재로 다양한 조형물이 있었고
+              소재가 소재이다 보니 평소와 다르게 조형물들을 조금 더 면밀하게 보게 되었다.
+              하나의 조형물을 보더라도 나의 시야각을 변화하니 달라지는 시야에 따라 느껴지는 감정이 남달랐다.
+              이 경험으로 하나의 물체, 더 나아가 모든 것을 볼 때 다양한 관점으로 보려는 노력의 초판이 되지 않았나 싶다.
+              2층에 올라가서는 부산을 포함한 세계 곳곳의 사진을 볼 수가 있었는데 대부분 일하는 모습의 장면이었다.
+              평소라면 그런 장면을 보아도 '아 일을 하는구나'하는 정도의 생각만으로 지나쳤을 것 같은데
+              사진의 구도와 색감 등으로 인하여 조금 더 자세히 보게 되었고 
+              '내가 알지 못하는 곳에서도 모두 열심히 살아가고 있구나'라는 생각을 가지게 되었다.
+              이렇게 평소와는 다르게 미술관을 벗어나는 경험은 이번이 처음이었는데
+              다음에 또 기회가 된다면 이처럼 다양한 느낌을 가질 수 있는 관찰을 하고 와야겠다.
+            </p>
           </div>
         </div>
 
