--- a/pages/etiquette.html
+++ b/pages/etiquette.html
@@ -59,8 +59,8 @@
         <!-- Title -->
         <p class="mt-4" style="font-size: 40px;">부일영화상 참여</p>
         <!-- Author -->
-        <p class="lead" style="position: relative; left: 87%;">
-          by
+        <p class="lead" style="position: relative; left: 83%;">
+          Post by
           <a href="https://www.instagram.com/cheeeo_ro/">박철오</a>
         </p>
         <hr>
@@ -127,7 +127,10 @@
           <div class="media-body">
             <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">정태수</p>
             <p style="font-size: 21px;">
-            
+              부일 영화상이라는 것을 처음 들어보았는데, 들어보니 우리나라에서 가장 오래된 영화상이었다.
+              이러한 영화상을 우리 교수님께서 진행하시니 신기하기도 하였다.
+              코로나19로 인하여 줌으로 진행되어서 유명한 연예인들 그리고 배우들을 직접 가까이에서 보지 못했다.라는 아쉬움이 남긴 하지만
+              이런 영화상이 있고, 관심 없는 분야이긴 하지만 보는 내내 재밌고 신기했다.
             </p>
           </div>
         </div>
