--- a/pages/hope.html
+++ b/pages/hope.html
@@ -59,8 +59,8 @@
         <!-- Title -->
         <p class="mt-4" style="font-size: 40px;">환경에너지 산업전</p>
         <!-- Author -->
-        <p class="lead" style="position: relative; left: 87%;">
-          by
+        <p class="lead" style="position: relative; left: 83%;">
+         Post by
           <a href="#">손정욱</a>
         </p>
         <hr>
@@ -150,7 +150,16 @@
           <div class="media-body">
             <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">박철오</p>
             <p style="font-size: 21px;">
-              
+              환경 에너지 산업전, 이름만 듣고 조원들과 합의하고 방문 신청하게 되었을 때만 해도
+              풍력발전, 수력발전 등 친환경에너지에 대해서만 상상을 하고 전시회를 방문하게 되었다.
+              조원들과의 시간 합의가 어려웠던 터라 마감 1시간 전에 모여서 전시회를 들어가게 되었는데,
+              들어가는 순간부터 '아쉽다. 개인적으로라도 먼저 와서 보고 있을걸' 하는 생각이 들었다.
+              나의 상상과는 다른, 효율적인 에너지 사용부터 환경을 생각하는 에너지 사용까지.
+              수많은 회사에서 에너지 사용에 대하여 환경을 해치지 않기 위해
+              서로의 합의점을 찾아가는 그러한 노력의 모습들을 볼 수 있었다.
+              '환경을 위해서 내가 할 수 있는 것은 무엇일까? 같은 고민을 하기도 했는데
+              모두가 할 수 있는 간단한 분리수거는 물론이거니와 
+              나의 전공을 환경과 결합한 아이디어를 떠올리는 계기가 되었다.
             </p>    
           </div>
         </div>
@@ -159,9 +168,9 @@
           <div class="media-body">
             <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">정태수</p>
             <p style="font-size: 21px;">
-              여러 가지 전기와 관련된 것들이 많았고 우리가 일상생활에서 쓰는데 아무 생각 없이 사용하는 것들도 있었다. 
+              여러 가지 환경과 관련된 것들이 많았고 우리가 일상생활에서 쓰는데 아무 생각 없이 사용하는 것들도 있었다. 
               잘 모르고 전공 지식이 없다보니 와 닿지 않는 부분도 많았는데 
-              같이 갔던 친구들 중에 전공인 친구가 있어서 옆에서 설명을 잘 해주어서 의미있는 박람회가 되었던 것 같다고 생각한다.
+              같이 갔던 친구들 중에 전공과 관련된 친구가 있어서 옆에서 설명을 잘 해준 덕에 의미있는 박람회가 되었던 것 같다고 생각한다.
             </p> 
           </div>
         </div>
