--- a/pages/tech.html
+++ b/pages/tech.html
@@ -59,8 +59,8 @@
         <!-- Title -->
         <p class="mt-4" style="font-size: 40px;">사는 게 재미없는 이 시대 남자들에게</p>
         <!-- Author -->
-        <p class="lead" style="position: relative; left: 87%;">
-          by
+        <p class="lead" style="position: relative; left: 83%;">
+          Post by
           <a href="#">손찬영</a>
         </p>
         <hr>
