--- a/pages/charming.html
+++ b/pages/charming.html
@@ -59,8 +59,8 @@
         <!-- Title -->
         <p class="mt-4" style="font-size: 40px;">ANOTHER REALITY : 밤의 미술관</p>
         <!-- Author -->
-        <p class="lead" style="position: relative; left: 87%;">
-          by
+        <p class="lead" style="position: relative; left: 83%;">
+         Post by
           <a href="#">정태수</a>
         </p>
         <hr>
@@ -170,7 +170,6 @@
             </p>
           </div>
         </div>
-
       </div>
 
       <!-- Sidebar Widgets Column -->
@@ -228,15 +227,12 @@
         <div class="card my-4">
           <h5 class="card-header">Summary</h5>
           <div class="card-body" style="font-size: 18px;">
-            요약 내용이 들어갈 자리
+            
           </div>
         </div>
-
       </div>
-
     </div>
     <!-- /.row -->
-
   </div>
   <!-- /.container -->
 
