add, modify summary

--- a/pages/charming.html
+++ b/pages/charming.html
@@ -227,7 +227,7 @@
         <div class="card my-4">
           <h5 class="card-header">Summary</h5>
           <div class="card-body" style="font-size: 18px;">
-            
+            낮과 밤이 서로 다른 미술관, <br>그 중 밤의 미술관을 다녀왔다.
           </div>
         </div>
       </div>
