--- a/pages/charming.html
+++ b/pages/charming.html
@@ -124,7 +124,11 @@
           <div class="media-body">
             <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">손정욱</p>
             <p style="font-size: 21px;">
-            
+              밤의 미술관은 부산이라는 하나의 테마로 1층, 2층 각기 다른 두 개의 주제를 가지고 있었는데 
+              나에게 인상 깊었던 것은 2층에 있는 사진들이었다. 
+              사진들은 밝은 분위기, 아련한 분위기, 조금 어두운 분위기 등 다양한 분위기를 연출 했으며, 
+              사진들의 장소들은 그냥 부산 곳곳의 장소였는데 사실 거창한 장소들이 아닌 우리가 지나가다가 흔히 볼법한 골목길, 가게, 점포 등이었다. 
+              작가가 어떤 감성과 시선을 가지고 찍었나에 따라 사진의 분위기가 달라 질 수 있음을 느꼈다.
             </p>
           </div>
         </div>
