--- a/pages/etiquette.html
+++ b/pages/etiquette.html
@@ -139,7 +139,11 @@
           <div class="media-body">
             <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">손정욱</p>
             <p style="font-size: 21px;">
-            
+              부일영화상은 70년 역사를 지닌 영화제라고 했으며 그에 걸맞게 이병헌, 서예지 등 스타들이 참여했다. 
+              그리고 나는 그 영화제에 비대면으로 참여하면서 70년 역사에 같이 참여 할 수 있었음에 뿌듯했다. 
+              하지만 한 편으로는 아쉬운 마음도 들었다. 지금 코로나 바이러스가 창궐하지 않아 일상적인 생활을 했다면 
+              비대면으로 참여하지 않고 직접 가서 현장의 공기를 느낄 수 있지 않았을까 하는 생각과 뿌듯함이 배가 되었을 것이라고 생각을 했다. 
+              하지만 분명 나에게 영화상 참여라는 기회는 색다른 경험이었다.
             </p>
           </div>
         </div>
