--- a/pages/tech.html
+++ b/pages/tech.html
@@ -183,7 +183,12 @@
           <div class="media-body">
             <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">손정욱</p>
             <p style="font-size: 21px;">
-            
+              삶은 우연의 연속이라고 설명한다. 하지만 사람들은 “해석학적 순환” 우연적인 사건들을 필연적인 것으로 만들어 놓고
+              필연성에 따라 행동을 하는 이 해석학적 순환을 계속한다고 이야기하며 이 해석학적 순환이 긍정적으로 연결 될 때
+              삶은 윤택해진다고 설명하고 있다. 그리고 긍정적인 영향을 미치기 위해서는 축제와 휴식이 필요하다고 이야기했는데
+              다시 말하면 지속 가능한 삶은 축제와 휴식이 필요하고 이것은 지금의 워라벨의 개념과 일치한다.
+              이 영상은 8년 전에 업데이트 돼 있던 영상인데 8년 전에 워라벨의 개념을 이야기한다는 것이 놀라웠고
+              지금 나에게 축제와 휴식이 무엇일지 생각해보게끔 만드는 강의였다.
             </p>
           </div>
         </div>
