--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             </div>
         </header>
         <!-- About-->
-        <section class="page-section bg-primary" id="topic">
+        <section class="page-section bg-primary" id="topic" style="height: 100%;">
             <div class="container">
-                <div class="row justify-content-center">
+                <div class="row justify-content-center" style="position: relative; transform: translate(0, 75%);">
                     <div class="col-lg-8 text-center" style="font-family: BMHANNA_11yrs; font-weight: 600;">
                         <p class="text-white mt-0" style="font-size: 56px;">Topic</p>
                         <hr class="divider light my-4" />
