--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>TECH융합인성 4조 포트폴리오</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -58,7 +58,7 @@
             <div class="container">
                 <div class="row justify-content-center" style="position: relative; transform: translate(0, 75%);">
                     <div class="col-lg-8 text-center" style="font-family: BMHANNA_11yrs; font-weight: 600;">
-                        <p class="text-white mt-0" style="font-size: 56px;">Topic</p>
+                        <p class="text-white mt-0" style="font-size: 56px;">주 제</p>
                         <hr class="divider light my-4" />
                         <p class="text-white-50 mb-4" ><span style="color: #fff; font-size: 21px;">지난 한학기동안 TECH융합인성을 이수하며 무엇을 체험하고 어떻게 느꼈을까요?</span></p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#portfolio">목차를 알아봅시다!</a> 
