--- a/pages/hope.html
+++ b/pages/hope.html
@@ -8,7 +8,7 @@
     <meta name="author" content="" />
     <title>TECH융합인성 4조 포트폴리오</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -129,7 +129,7 @@
 
         <!-- Single Comment -->
         <div class="media mb-4">
-          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <img class="d-flex mr-3 rounded-circle" src="../assets/img/portfolio/profile/default_profile_image.png" alt="">
           <div class="media-body">
             <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">손찬영</p>
             <p style="font-size: 21px;">
@@ -164,7 +164,7 @@
           </div>
         </div>
         <div class="media mt-4">
-          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <img class="d-flex mr-3 rounded-circle" src="../assets/img/portfolio/profile/default_profile_image.png" alt="">
           <div class="media-body">
             <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">정태수</p>
             <p style="font-size: 21px;">
