--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                             <a href="./pages/tech.html">
                             <i class="fas fa-4x fa-user-alt text-primary mb-4"></i>
                             <div style="color: black;">
-                                <p class="h4 mb-2" style="font-family: BMHANNA_11yrs;">Talent | Technique</p>
+                                <p class="h4 mb-2" style="font-family: BMHANNA_11yrs;">TALENT | TECHNIQUE</p>
                                 <p class="text-muted mb-0" style="font-family: BMHANNA_11yrs; font-size: 21px;">인문학 강연 참여</p>
                             </div>
                             </a>
@@ -159,7 +159,7 @@
                             <a href="./pages/etiquette.html">
                             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
                             <div style="color: black;">
-                                <p class="h4 mb-2" style="font-family: BMHANNA_11yrs;" >Etiquette</p>
+                                <p class="h4 mb-2" style="font-family: BMHANNA_11yrs;" >ETIQUETTE</p>
                                 <p class="text-muted mb-0" style="font-family: BMHANNA_11yrs; font-size: 21px;">부일영화상 참가</p>
                             </div>
                             </a>
@@ -170,7 +170,7 @@
                             <a href="./pages/charming.html">
                             <i class="fas fa-4x fa-heart text-primary mb-4"></i>
                             <div style="color: black;">
-                                <p class="h4 mb-2" style="font-family: BMHANNA_11yrs;">Charming</p>
+                                <p class="h4 mb-2" style="font-family: BMHANNA_11yrs;">CHARMING</p>
                                 <p class="text-muted mb-0" style="font-family: BMHANNA_11yrs; font-size: 21px; font-size: 21px;">ANOTHER REALITY<br>밤의 미술관 전시회</p>
                             </div>
                             </a>
@@ -181,7 +181,7 @@
                             <a href="./pages/hope.html">
                             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
                             <div style="color: black;">
-                                <p class="h4 mb-2" style="font-family: BMHANNA_11yrs;">Hope</p>
+                                <p class="h4 mb-2" style="font-family: BMHANNA_11yrs;">HOPE</p>
                                 <p class="text-muted mb-0" style="font-family: BMHANNA_11yrs; font-size: 21px;">환경에너지산업전 참여</p>
                             </div>
                             </a>
