real real final

--- a/pages/tech.html
+++ b/pages/tech.html
@@ -250,6 +250,7 @@
           <h5 class="card-header">Summary</h5>
           <div class="card-body" style="font-size: 18px;">
             코로나 시대에 오프라인 인문학 강연 참여가 힘들었기에 유튜브를 활용하여 인문학 강연을 참여하게 되었다.
+            <a href="https://youtu.be/YAMotaN4CrE">영상 링크</a>
           </div>
         </div>
 
