real real real real final...

--- a/index.html
+++ b/index.html
@@ -192,7 +192,10 @@
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright © 2020 KS_TECH융합인성(1)</div></div>
+            <div class="container">
+                <img src="./assets/img/linclogo.png" alt="logo" style="width: 200px;">
+                <p class="small text-center text-muted" style="display: inline; padding-left: 230px;">Copyright © 2020 KS_TECH융합인성(1)</p>
+            </div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
