--- a/pages/charming.html
+++ b/pages/charming.html
@@ -42,10 +42,10 @@
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0" style="font-size: 18px;">
-                    <li class="column"><a class="nav-link js-scroll-trigger" href="./tech.html">Technique</a></li>
-                    <li class="column"><a class="nav-link js-scroll-trigger" href="./etiquette.html">Etiquette</a></li>
-                    <li class="column"><a class="nav-link js-scroll-trigger" href="./charming.html" style="color: #f4623a;">Charming</a></li>
-                    <li class="column"><a class="nav-link js-scroll-trigger" href="./hope.html">Hope</a></li>
+                  <li class="column"><a class="nav-link js-scroll-trigger" href="./tech.html">TECHNIQUE</a></li>
+                  <li class="column"><a class="nav-link js-scroll-trigger" href="./etiquette.html">ETIQUETTE</a></li>
+                  <li class="column"><a class="nav-link js-scroll-trigger" href="./charming.html" style="color: #f4623a;">CHARMING</a></li>
+                  <li class="column"><a class="nav-link js-scroll-trigger" href="./hope.html">HOPE</a></li>
                 </ul>
             </div>
         </div>
@@ -242,7 +242,10 @@
 
   <!-- Footer-->
   <footer class="bg-light py-5">
-    <div class="container"><div class="small text-center text-muted">Copyright © 2020 KS_TECH융합인성(1)</div></div>
+    <div class="container">
+      <img src="../assets/img/linclogo.png" alt="logo" style="width: 200px;">
+      <p class="small text-center text-muted" style="display: inline; padding-left: 230px;">Copyright © 2020 KS_TECH융합인성(1)</p>
+    </div>
   </footer>
 
   <!-- Bootstrap core JS-->
